solve overflow

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -6,6 +6,7 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow-y: hidden;
 }
 
 body {
